# agentic-flow

./: .gitignore  Cargo.toml  README.md
src/: actor.rs  agent.rs  config.rs  errors.rs  lib.rs  llm_client.rs  mcp_manager.rs  model.rs  planner.rs  tool_registry.rs  worker.rs
tests/: test_agentic_pool.rs  test_integration.rs  test_llm_client.rs  test_planner.rs  test_worker_agentic_pool.rs  test_worker_task_pool.rs
tests/common/: llm_provider.rs  mod.rs  tools.rs
