[package]
name = "agentic-flow"
version = "0.1.0"
edition = "2024"


[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agenti_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]


[dependencies]
async-trait = "0.1.89"
reqwest = { version = "0.12.23", features = ["json"] }
rmcp = { version="0.5.0", features = [
    "client",
    "transport-child-process"
]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
